[VAN-91] refactor: code cleanup